ops/security/kyverno-policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      This policy enforces that all containers must run as a non-root user to satisfy
      Federal least-privilege compliance.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: validate-runAsNonRoot
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - argocd
          - monitoring
          - security
    validate:
      message: "Running containers as root is explicitly disallowed. Initialize `runAsNonRoot: true` in your pod spec."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          =(containers):
          - =(securityContext):
              =(runAsNonRoot): true
